# photoSort

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  lint.sh  pyproject.toml  test.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
photosort/: main.py
photosort/logging/: logger.py
photosort/metadata/: extract.py  geotag.py
photosort/organizer/: conflict.py  sorter.py
photosort/scanner/: scan.py
photosort/tests/: test_main.py  test_stub.py
photosort/utils/: progress.py
